# common-utils

./: .gitignore  README.md  Transformer_ALL_Compiled.ipynb  a.pt  ground_truth_attention.pt  output_tensor.pt  pylint_results.json  pyproject.toml  rebuild_package.sh  requirements.txt  requirements_dev.txt  sandbox.ipynb  setup.cfg  single_head_ground_truth_attention.pt  t.py  tmp.py  tmpp.py  tmppp.py
.github/workflows/: ci.yaml  continuous_integration.yaml  deploy_jupyterbook.yaml  email.yaml  publish_package.sh  publish_package.yaml
common_utils/cloud/: base.py
common_utils/core/: artifacts.py  common.py  decorators.py  logger.py
common_utils/orchestrator/: core.py
common_utils/tests/: core.py
examples/training_chronicles/: README.md
scripts/: init_mlflow.sh  install_miniconda.sh  make_conda_macos.sh  make_pbs.sh  make_venv.sh  ohmyzsh_powerlevel10k.sh  rebuild_package.sh  rebuild_package2.sh  reminder.sh  retry_ssh.sh  setup_airbyte.sh  setup_gcloud_cli.sh  setup_macos.md  utils.sh
scripts/cloud/: gcloud_cli_macos_setup.sh  gcloud_functions.sh  setup_docker.sh  setup_vm.sh
scripts/containerization/: docker_setup.sh
scripts/dataops/: debug_run_test_dbt.sh  setup_dbt.sh
scripts/devops/: ci_formatter.sh  ci_linter.sh  clean.sh  formatter.sh  linter.sh  make_conda_env.sh  make_venv.sh  make_venv_with_setup.sh
scripts/mlops/: dvc_add_push.sh  dvc_setup_gcs.sh  setup_dvc.sh
src/: decorators.py
tests/core/: test_logger.py
tests/data_validator/: test_core.py
transformer/: annotated_transformer.py  annotated_transformer_gaohn.py  b.py  dump.md  transformer.html  transformer.md  transformer.py
transformer/cuda/: allocator.py  defrag.py  defrag_2.py  fragmentation.md
transformer/ddp/: ddp.md  ddp.py  dist_tuto.md  terminologies.md
(+193 files in other folders)
