[project]
name = "gaohn-common-utils"
version = "0.0.13"
authors = [
  { name="Gao Hongnan", email="hongnangao@gmail.com" },
]
description = "A small utility package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "requests",
    "prettytable",
    "rich",
    "torch",
    "torchvision",
    "torchaudio",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/gao-hongnan/common-utils"
"Bug Tracker" = "https://github.com/gao-hongnan/common-utils/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

