[metadata]
name = common-utils
version = 1.0.0
author = Hongnan Gao
author_email = hongnangao@gmail.com
description = A simple Python Utility package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/gao-hongnan/common-utils
project_urls =
    Bug Tracker = https://github.com/gao-hongnan/common-utils/-/issues
    repository = https://github.com/gao-hongnan/common-utils
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src